FreeImage/Wrapper/Delphi/FreeImage.pas


function FreeImage_GetScanLine(dib: PFIBITMAP; scanline: integer): PByte; stdcall;
  external FIDLL name '_FreeImage_GetScanLine@8';

function FreeImage_GetBPP(dib: PFIBITMAP): Cardinal; stdcall;
  external FIDLL name '_FreeImage_GetBPP@4';

function FreeImage_GetWidth(dib: PFIBITMAP): Cardinal; stdcall;
  external FIDLL name '_FreeImage_GetWidth@4';

function FreeImage_GetHeight(dib: PFIBITMAP): Cardinal; stdcall;
  external FIDLL name '_FreeImage_GetHeight@4';

function FreeImage_GetLine(dib: PFIBITMAP): Cardinal; stdcall;
  external FIDLL name '_FreeImage_GetLine@4';

function FreeImage_GetPitch(dib : PFIBITMAP) : Cardinal; stdcall;
  external FIDLL name '_FreeImage_GetPitch@4';
  
function FreeImage_GetDIBSize(dib: PFIBITMAP): Cardinal; stdcall;
  external FIDLL name '_FreeImage_GetDIBSize@4';

function FreeImage_GetPalette(dib: PFIBITMAP): PRGBQUAD; stdcall;
  external FIDLL name '_FreeImage_GetPalette@4';

function FreeImage_GetDotsPerMeterX(dib: PFIBITMAP): Cardinal; stdcall;
external FIDLL name '_FreeImage_GetDotsPerMeterX@4';

function FreeImage_GetDotsPerMeterY(dib: PFIBITMAP): Cardinal; stdcall;
  external FIDLL name '_FreeImage_GetDotsPerMeterY@4';

function FreeImage_GetInfoHeader(dib: PFIBITMAP): PBITMAPINFOHEADER; stdcall;
  external FIDLL name '_FreeImage_GetInfoHeader@4';

function FreeImage_GetInfo(var dib: FIBITMAP): PBITMAPINFO; stdcall;
  external FIDLL name '_FreeImage_GetInfo@4';

function FreeImage_GetColorType(dib: PFIBITMAP): FREE_IMAGE_COLOR_TYPE; stdcall;
  external FIDLL name '_FreeImage_GetColorType@4';

// Pixels access routines ---------------------------------------------------

function FreeImage_GetPixelIndex(dib: PFIBITMAP; X, Y: Longint;
  var Value: PByte): Boolean; stdcall;
  external FIDLL name '_FreeImage_GetPixelIndex@16';

function FreeImage_GetPixelColor(dib: PFIBITMAP; X, Y: Longint;
  var Value: PRGBQuad): Boolean; stdcall;
  external FIDLL name '_FreeImage_GetPixelColor@16';

function FreeImage_SetPixelIndex(dib: PFIBITMAP; X, Y: Longint;
  Value: PByte): Boolean; stdcall;
  external FIDLL name '_FreeImage_SetPixelIndex@16';

function FreeImage_SetPixelColor(dib: PFIBITMAP; X, Y: Longint;
  Value: PRGBQuad): Boolean; stdcall;
  external FIDLL name '_FreeImage_SetPixelColor@16';

// ICC profile routines -----------------------------------------------------

function FreeImage_GetICCProfile(var dib: FIBITMAP): PFIICCPROFILE; stdcall;
  external FIDLL name '_FreeImage_GetICCProfile@4';

function FreeImage_CreateICCProfile(var dib: FIBITMAP; data: pointer;
  size: longint): PFIICCPROFILE; stdcall;
  external FIDLL name 'FreeImage_CreateICCProfile@12';

procedure FreeImage_DestroyICCProfile(var dib : FIBITMAP); stdcall;
  external FIDLL name 'FreeImage_DestroyICCProfile@4';

// Line conversion routines -----------------------------------------------------

procedure FreeImage_ConvertLine1To8(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine1To8@12';
procedure FreeImage_ConvertLine4To8(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine4To8@12';
procedure FreeImage_ConvertLine16To8_555(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine16To8_555@12';
procedure FreeImage_ConvertLine16To8_565(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine16To8_565@12';
procedure FreeImage_ConvertLine24To8(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine24To8@12';
procedure FreeImage_ConvertLine32To8(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine32To8@12';

procedure FreeImage_ConvertLine1To16_555(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine1To16_555@16';
procedure FreeImage_ConvertLine4To16_555(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine4To16_555@16';
procedure FreeImage_ConvertLine8To16_555(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine8To16_555@16';
procedure FreeImage_ConvertLine16_565_To16_555(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine16_565_To16_555@12';
procedure FreeImage_ConvertLine24To16_555(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine24To16_555@12';
procedure FreeImage_ConvertLine32To16_555(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine32To16_555@12';

procedure FreeImage_ConvertLine1To16_565(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine1To16_565@16';
procedure FreeImage_ConvertLine4To16_565(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine4To16_565@16';
procedure FreeImage_ConvertLine8To16_565(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine8To16_565@16';
procedure FreeImage_ConvertLine16_555_To16_565(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine16_555_To16_565@12';
procedure FreeImage_ConvertLine24To16_565(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine24To16_565@12';
procedure FreeImage_ConvertLine32To16_565(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine32To16_565@12';

procedure FreeImage_ConvertLine1To24(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine1To24@16';
procedure FreeImage_ConvertLine4To24(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine4To24@16';
procedure FreeImage_ConvertLine8To24(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine8To24@16';
procedure FreeImage_ConvertLine16To24_555(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine16To24_555@12';
procedure FreeImage_ConvertLine16To24_565(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine16To24_565@12';
procedure FreeImage_ConvertLine32To24(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine32To24@12';

procedure FreeImage_ConvertLine1To32(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine1To32@16';
procedure FreeImage_ConvertLine4To32(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine4To32@16';
procedure FreeImage_ConvertLine8To32(target, source : PBYTE; width_in_pixels : integer; palette : PRGBQUAD);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine8To32@16';
procedure FreeImage_ConvertLine16To32_555(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine16To32_555@12';
procedure FreeImage_ConvertLine16To32_565(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine16To32_565@12';
procedure FreeImage_ConvertLine24To32(target, source : PBYTE; width_in_pixels : integer);
                                stdcall; external FIDLL name '_FreeImage_ConvertLine24To32@12';

// Smart conversion routines ------------------------------------------------

function FreeImage_ConvertTo8Bits(dib : PFIBITMAP) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_ConvertTo8Bits@4';
function FreeImage_ConvertTo16Bits555(dib : PFIBITMAP) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_ConvertTo16Bits555@4';
function FreeImage_ConvertTo16Bits565(dib : PFIBITMAP) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_ConvertTo16Bits565@4';
function FreeImage_ConvertTo24Bits(dib : PFIBITMAP) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_ConvertTo24Bits@4';
function FreeImage_ConvertTo32Bits(dib : PFIBITMAP) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_ConvertTo32Bits@4';

function FreeImage_ColorQuantize(dib : PFIBITMAP; quantize : FREE_IMAGE_QUANTIZE) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_ColorQuantize@8';

function FreeImage_Threshold(dib : PFIBITMAP; T : Byte) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_Threshold@8';
function FreeImage_Dither(dib : PFIBITMAP; algorithm : FREE_IMAGE_DITHER) : PFIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_Dither@8';


function FreeImage_ConvertFromRawBits(bits : PBYTE; width, height, pitch : integer;
                                bpp, red_mask, green_mask, blue_mask : longword;
                                topdown : boolean) : FIBITMAP;
                                stdcall; external FIDLL name '_FreeImage_ConvertFromRawBits@36';

procedure FreeImage_ConvertToRawBits(bits : PBYTE; dib : PFIBITMAP; pitch : integer;
                                bpp, red_mask, green_mask, blue_mask : longword;
                                topdown  : boolean);
                                stdcall; external FIDLL name '_FreeImage_ConvertToRawBits@32';

function FreeImage_ConvertToStandardType(src: PFIBITMAP;
  scale_linear: Boolean = True): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_ConvertToStandardType@8';

function FreeImage_ConvertToType(src: PFIBITMAP; dst_type: FREE_IMAGE_TYPE;
  scale_linear: Boolean = True): PFIBITMAP; stdcall;
  external FIDLL name '_FreeImage_ConvertToType@16';



// ZLib interface -----------------------------------------------------------

function FreeImage_ZLibCompress(target : PBYTE; target_size : DWORD; source : PBYTE;
                                source_size : DWORD) : DWORD; stdcall;external FIDLL name '_FreeImage_ZLibCompress@16';


function FreeImage_ZLibUncompress(target : PBYTE; target_size : DWORD; source : PBYTE;
                                source_size : DWORD) : DWORD; stdcall;external FIDLL name '_FreeImage_ZLibUncompress@16';

// --------------------------------------------------------------------------
// Metadata routines --------------------------------------------------------
// --------------------------------------------------------------------------
